# sweetlearn

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: main.rs
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
