[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core Web Framework
actix-web = "4.0"
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres"] }

# Authentication & Security
bcrypt = "0.17.0"
jsonwebtoken = "9.3.0"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
anyhow = "1.0"