[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core Web Framework
actix-web = "4.4.0"
actix-cors = "0.7.0"
tokio = { version = "1.37.0", features = ["full"] }

# Serialization
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

# Validation
validator = { version = "0.16.1", features = ["derive"] }

# Database (for future use)
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres"] }

# Authentication & Security
bcrypt = "0.17.0"
jsonwebtoken = "9.3.0"

# Date/Time
chrono = { version = "0.4.38", features = ["serde"] }

# Utilities
uuid = { version = "1.8.0", features = ["v4", "serde"] }
dotenv = "0.15.0"
anyhow = "1.0.86"

# Logging
log = "0.4.21"
env_logger = "0.11.3"

# Additional recommended dependencies
thiserror = "1.0.58"  # For better error handling
argon2 = "0.5.3"      # Alternative password hashing
config = "0.14.0"     # For configuration management